# roadtrip

./: .gitignore  Cargo.toml  LICENSE.md  README.md
roadtrip-cache/: Cargo.toml
roadtrip-cache/src/: error.rs  lib.rs  lock.rs
roadtrip-cache/tests/: from_empty.rs  from_fs.rs
roadtrip-cache/tests/util/: mod.rs
roadtrip-core/: Cargo.toml
roadtrip-core/src/: datetime.rs  geometry.rs  lib.rs  media.rs
roadtrip-gtk/: Cargo.toml
roadtrip-gtk/assets/: icon.gdk  placeholder.gdk
roadtrip-gtk/src/: main.rs  main_window.rs
roadtrip-ingest/: Cargo.toml
roadtrip-ingest/src/: ingest.rs  lib.rs
roadtrip-ingest/src/ingest/: exiftool.rs  gpx.fmt
roadtrip-viewer/: Cargo.toml
roadtrip-viewer/src/: dirs.rs  error.rs  exit.rs  lib.rs  thumbs.rs
roadtrip-viewer/tests/: media_scan.rs
roadtrip-walkdir/: Cargo.toml
roadtrip-walkdir/src/: error.rs  lib.rs
roadtrip-walkdir/tests/: walkdir.rs
src/: lib.rs
