[workspace]
members = ["roadtrip-walkdir", "roadtrip-ingest", "roadtrip-core", "roadtrip-viewer", "roadtrip-cache", "roadtrip-gtk"]

[package]
name = "roadtrip"
version = "0.1.0"
authors = ["Sam Wilson <tecywiz121@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
roadtrip-core = { path = "roadtrip-core" }
roadtrip-cache = { path = "roadtrip-cache" }
roadtrip-walkdir = { path = "roadtrip-walkdir" }
roadtrip-ingest = { path = "roadtrip-ingest" }
roadtrip-viewer = { path = "roadtrip-viewer" }
