[package]
name = "roadtrip-core"
version = "0.1.0"
authors = ["Sam Wilson <tecywiz121@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
geo = "0.14.2"
geo-types = "0.6.0"
chrono = "0.4.15"
typed-builder = "0.7.0"
hex = "0.4.2"
