[package]
name = "roadtrip-gtk"
version = "0.1.0"
authors = ["Sam Wilson <tecywiz121@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
roadtrip = { path = ".." }
osmgpsmap = { path = "../../osmgpsmap-rs" }
gtk = { version = "0.9.2", features = ["v3_20"] }
gio = "0.9.1"
glib = { version = "0.10.2", features = ["v2_58"] }
gdk-pixbuf = "0.9.0"
tokio = { version = "0.2.22", features = ["macros", "rt-threaded"] }
futures = "0.3.5"
chrono = "0.4.15"
