[package]
name = "roadtrip-walkdir"
version = "0.1.0"
authors = ["Sam Wilson <tecywiz121@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
snafu = "0.6.8"
futures = "0.3.5"
tokio = { version = "0.2.22", features = ["fs"] }

[dev-dependencies]
tokio = { version = "0.2.22", features = ["fs", "rt-threaded", "macros"] }
